# oxvif

./:  - 複製.env  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: README.md  accesscontrol.md  accessrules.md  audio.md  audit-2026-05.md  credential.md  dependency-pitfalls.md  device.md  deviceio.md  events.md  media1.md  metamorph.md  ptz.md  recording.md  schedule.md  search.md
docs/active/: metamorph-clone-in-oxdm.md  metamorph-container-and-quirk-diff.md  metamorph.md
docs/done/: audit-2026-05.md
docs/reference/: README.md  analytics.md  authenticationbehavior.md  device.md  discovery.md  doorcontrol.md  imaging.md  media2.md  osd.md  receiver.md  recording.md  replay.md  search.md  types.md
examples/: camera.rs  conformance.rs  healthcheck.rs  metamorph_adapter.rs  metamorph_record.rs  metamorph_serve.rs  mock_fleet.rs  mock_server.rs  odm_compat.rs  probe_unicast.rs  record_fixtures.rs  write_workflow.rs
examples/mock_server/: auth.rs  dispatch.rs  helpers.rs  main.rs  snapshot.rs  state.rs  xml_parse.rs
examples/mock_server/services/: device.rs  events.rs  imaging.rs  media.rs  media2.rs  ptz.rs  recording.rs
src/: client.rs  discovery.rs  error.rs  fixtures.rs  lib.rs  main.rs  session.rs  transport.rs  types.rs
src/client/: device.rs  events.rs  imaging.rs  media.rs  media2.rs  mod.rs  ptz.rs  recording.rs
src/health/: capture.rs  checks.rs  coverage.rs  mod.rs  report.rs
src/metamorph/: adapter.rs  fixture.rs  mod.rs  quirk.rs  record.rs  replay.rs
src/mock/: auth.rs  canon.rs  discovery_responder.rs  dispatch.rs  fault_injection.rs  fleet.rs  font.rs  helpers.rs  mod.rs  responder.rs  server.rs  snapshot.rs  state.rs  transport.rs
src/mock/services/: device.rs  events.rs  imaging.rs  media.rs  media2.rs  mod.rs  ptz.rs  recording.rs
src/soap/: envelope.rs  error.rs  mod.rs  security.rs  xml.rs
src/tests/: client_tests.rs  session_tests.rs  types_tests.rs
src/types/: audio.rs  capabilities.rs  device.rs  events.rs  imaging.rs  media.rs  mod.rs  osd.rs  ptz.rs  ptz_config.rs  recording.rs  video.rs
tests/: mock_workflow.rs
tests/fixtures/: README.md
