[package]
name = "oxvif"
version = "0.9.5"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client library for the ONVIF IP camera protocol"
license = "MIT"
keywords = ["onvif", "camera", "rtsp", "soap", "ip-camera"]
categories = ["network-programming", "multimedia"]
repository = "https://github.com/smiti1642/oxvif"
homepage = "https://github.com/smiti1642/oxvif"
documentation = "https://docs.rs/oxvif"
readme = "README.md"
exclude = [".env", ".env.example"]

[features]
# In-process mock ONVIF device for unit-testing client code without a camera.
# `mock` gives the zero-network `MockTransport`; `mock-server` adds a real
# bound-port `MockServer` (pulls axum).
mock = ["dep:serde"]
mock-server = ["mock", "dep:axum", "tokio/rt-multi-thread"]

[dependencies]
quick-xml    = "0.39"
sha1         = "0.11"
base64       = "0.22"
rand         = "0.10.1"
reqwest      = { version = "0.13.2", default-features = false, features = ["rustls"] }
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync"] }
thiserror    = "2"
async-trait  = "0.1"
async-stream = "0.3"
futures-core = "0.3"
if-addrs     = "0.15"
socket2      = "0.6"
diqwest      = "3.2"
tracing      = "0.1"
# Optional — enabled by the `mock` / `mock-server` features only.
serde        = { version = "1", features = ["derive"], optional = true }
axum         = { version = "0.8", optional = true }

[dev-dependencies]
mockito = "1"
dotenvy = "0.15"
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
axum    = "0.8"
futures = "0.3"
serde   = { version = "1", features = ["derive"] }
toml    = "1"
fs2     = "0.4"
dirs    = "6"

# The mock_server example is now a thin wrapper over `oxvif::mock::MockServer`.
[[example]]
name = "mock_server"
required-features = ["mock-server"]
