[package]
name = "oxvif"
version = "0.13.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client library for the ONVIF IP camera protocol"
license = "MIT"
keywords = ["onvif", "camera", "rtsp", "soap", "ip-camera"]
categories = ["network-programming", "multimedia"]
repository = "https://github.com/smiti1642/oxvif"
homepage = "https://github.com/smiti1642/oxvif"
documentation = "https://docs.rs/oxvif"
readme = "README.md"
# `docs/` is a development-only ONVIF WSDL reference — not needed to build or
# use the crate, so keep it out of the published package.
exclude = [".env", ".env.example", "docs/"]

# Build docs.rs with the mock + health features so `oxvif::mock` and
# `oxvif::health` are documented there.
# (This only affects docs.rs rendering — it does not enable features for users.)
[package.metadata.docs.rs]
features = ["mock-server", "health"]

[features]
# Derive `serde::Serialize` + `Deserialize` on every public response type in
# `oxvif::types`, so they can be exposed directly over a REST API / persisted
# as JSON without hand-cloning parallel structs. Off by default — pulls no new
# dependency and costs nothing unless enabled. Field names are the Rust-native
# snake_case identifiers (no `rename_all`).
serde = ["dep:serde"]
# In-process mock ONVIF device for unit-testing client code without a camera.
# `mock` gives the zero-network `MockTransport`; `mock-server` adds a real
# bound-port `MockServer` (pulls axum).
mock = ["dep:serde"]
mock-server = ["mock", "dep:axum", "tokio/rt-multi-thread"]
# Fast ONVIF health / conformance check (HealthCheck) for a target device.
# Pure library code over OnvifSession. Pulls serde + serde_json for the
# `HealthReport::to_json` / `to_json_pretty` outputs that drive `--json` and
# the `--baseline` diff flow.
health = ["dep:serde", "dep:serde_json", "dep:digest_auth"]
# Persona B (record / replay) of the metamorph shape-shifting device: clone a
# real camera into a param-aware fixture set and replay it in-process without
# hardware. A superset of `mock` — builds on its responder chain, `DeviceState`,
# and canonicaliser. See `docs/metamorph.md`.
metamorph = ["mock", "dep:serde_json"]

[dependencies]
quick-xml    = "0.41"
sha1         = "0.11"
base64       = "0.22"
rand         = "0.10.1"
reqwest      = { version = "0.13.2", default-features = false, features = ["rustls"] }
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "sync"] }
thiserror    = "2"
async-trait  = "0.1"
async-stream = "0.3"
futures-core = "0.3"
if-addrs     = "0.15"
socket2      = "0.6"
diqwest      = "3.2"
tracing      = "0.1"
# Optional — enabled by the `mock` / `mock-server` / `health` features only.
serde        = { version = "1", features = ["derive"], optional = true }
serde_json   = { version = "1", optional = true }
axum         = { version = "0.8", optional = true }
# Manual HTTP Digest for the health snapshot probe (the only HTTP-digest use
# outside the WS-Security SOAP path). Lets us quote `qop="auth"`, which some
# Hikvision/Uniview firmware require and diqwest emits unquoted.
digest_auth  = { version = "0.3", optional = true }

[dev-dependencies]
# Regression guard: force `quick-xml/encoding` on for the test build via
# feature unification, so `cargo test` compiles the library exactly as a
# downstream crate that enables `encoding` (e.g. via calamine) would. Any
# future call into an `encoding`-gated quick-xml API fails the build here
# instead of only in a user's workspace. See CHANGELOG 0.9.9.
quick-xml = { version = "0.41", features = ["encoding"] }
mockito = "1"
dotenvy = "0.15"
# Exercises the `serde` feature's derives with a real JSON roundtrip in tests.
serde_json = "1"
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
axum    = "0.8"
futures = "0.3"
serde   = { version = "1", features = ["derive"] }
toml    = "1"
fs2     = "0.4"
dirs    = "6"

# The mock_server example is now a thin wrapper over `oxvif::mock::MockServer`.
[[example]]
name = "mock_server"
required-features = ["mock-server"]

# Fleet: start several mock cameras at once (one port each) and batch-scan them.
[[example]]
name = "mock_fleet"
required-features = ["mock-server"]

[[example]]
name = "healthcheck"
required-features = ["health"]

# Records every SOAP exchange against a real camera into
# tests/fixtures/<vendor>-<model>/ so the rest of the test suite can replay
# without a device.
[[example]]
name = "record_fixtures"
required-features = ["mock", "health"]

# Metamorph Persona B recorder: clone a real camera into a param-aware
# `fixtures.json` for in-process replay via `MetamorphTransport`.
[[example]]
name = "metamorph_record"
required-features = ["metamorph"]

# Metamorph Persona C template: skin one fixed RTSP stream as an ONVIF device.
[[example]]
name = "metamorph_adapter"
required-features = ["metamorph"]
